--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -201,16 +201,7 @@ div #popeText #wiki a{
     padding-top: 5px;
     color: #fff;
 }
-#unlike{
-    display: block;
-    width: 250px;
-    height: 80px;
-    float: left;
-    background-color: #eba222 ;
-    opacity: 1;
-    padding-top: 30px;
-    color: #fff;
-}
+
 #likeA{
     display: block;
     width: 250px;
@@ -393,11 +384,11 @@ section #worldleaders{
 #bannerDown{
     display: block;
     width:480px;
-    height: 80px;
+    height: 130px;
     margin: 0 auto;
     margin-left: 0px;
     background-image: url(../../assets/img/backgrounB.png);
-    background-size: 480px;
+    background-size: cover;
     background-repeat: no-repeat;
     margin-top: 20px;
 }
@@ -422,15 +413,18 @@ section #worldleaders{
 	display:inline-block;
 	cursor:pointer;
 	color: #000;
-	font-family:Arial;
-	font-size:17px;
-	padding:16px 31px;
+    font-family:Arial;
+    font-size:10px;
+	padding:7px 15px;
+	
 	text-decoration:none;
 	
 }
 
 footer{
     display: block;
+    position: relative;
+    top:0px;
   
 } 
 #menuFooter{
@@ -440,6 +434,7 @@ footer{
     display: block;
     width: 480px;
     height: 20px;
+    background-color: #fff;
 
 }
 #menuFooter ul li{
@@ -449,12 +444,14 @@ footer{
     float: left;
     font-size: 10px;
     font-weight: 100;
+   
     
 }
 #social ul{
     display: block;
     width: 300px;
     height: 20px;
+    margin-top: -20px;
 
 }
 #social ul li{
@@ -801,6 +798,7 @@ section #worldleaders{
     margin-left: 130px;
     background-image: url(../../assets/img/backgrounB.png);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 #bannerDown p{
     font-size: 30px;
@@ -831,7 +829,11 @@ section #worldleaders{
 }
 
 footer{
+    position: relative;
+    top:-50px;
     display: block;
+    height: 50px;
+  
   
 } 
 #menuFooter{
@@ -850,10 +852,12 @@ footer{
     float: left;
     font-size: 10px;
     font-weight: 100;
+    background-color: #fff;
     
 }
 #social ul{
     display: block;
+    margin-top: 0px;
     width: 300px;
     height: 20px;
 
